name:                toml-parse
version:             0.1.0.0
synopsis:            TOML parser and associated combinators for quickly reading out configuration
description:         Please see README.md
homepage:            https://www.pliosoft.com/oss/toml-parse/
license:             BSD3
license-file:        LICENSE
author:              Christopher Lord
maintainer:          christopher@pliosoft.com
copyright:           (C) Christopher Lord
category:            Configuration, Parser, Text, JSON, Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Toml
                     , Text.Toml.Types.Toml
                     , Text.Toml.Types.Tokens
                     , Text.Toml.Tokenizer
                     , Text.Toml.Combinators
                     , Text.Toml.Parser
                     , Text.Toml.Query
  build-depends:       base >= 4.7 && < 5.0
                     , text >= 1.2 && < 2.0
                     , time >= 1.5 && < 2.0
                     , lens >= 4.12 && < 5.0
                     , attoparsec >= 0.12.1.6 && < 1.0
                     , containers >= 0.5 && < 1.0
                     , bytestring >= 0.10.6 && < 1.0
                     , unordered-containers >= 0.2.5 && < 1.0
                     , parsec
  default-language:    Haskell2010

executable toml-decoder
  hs-source-dirs:      toml-test
  main-is:             decoder.hs
  build-depends:       base
                     , toml-parse
                     , aeson
                     , text
                     , time
                     , unordered-containers >= 0.2.5 && < 1.0
  default-language:    Haskell2010

test-suite toml-parse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.1 && < 3.0
                     , toml-parse >= 0.1 && < 0.2
                     , text >= 1.2 && < 2.0
                     , time >= 1.5 && < 2.0
                     , QuickCheck >= 2.8.1 && < 3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pliosoft/toml-parse
